--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
           <aside ID="menu_redes">
                Vanesa Farfan
                <br>
+               Brayan Gonzalez
                <br>
-               ortos articulos
+               Cristian Veloza
                <br><br>
      
 
