--- a/index_1.html
+++ b/index_1.html
@@ -9,10 +9,11 @@
                <br>
           </section>
           <aside ID="menu_redes">
-               redes sociales
+               Vanesa Farfan
                <br>
+               Brayan Gonzalez
                <br>
-               ortos articulos
+               Cristian Veloza
                <br><br>
      
 
