--- a/index_2.html
+++ b/index_2.html
@@ -9,11 +9,13 @@
               <br>
          </section>
          <aside ID="menu_redes">
-              redes sociales
-              <br>
-              <br>
-              ortos articulos
-              <br><br>
+             <br>
+                Vanesa Farfan
+               <br>
+               Brayan Gonzalez
+               <br>
+               Cristian Veloza
+               <br><br>
     
 
          </aside>
