--- a/index_1.html
+++ b/index_1.html
@@ -2,13 +2,14 @@
      <img src="imagenes/logo u cundinamarca.png"width=500px height="250px" alt=""><br>
      <main>
           <section id="seccion1">
-               <h2><b> PARQUEADERO AUTOMATIZADO</b></h2>
+               <h2><b> Glosario Fundamentos De Ingenieria</b></h2>
                <br>
                <br>
                <br>
                <br>
           </section>
           <aside ID="menu_redes">
+               <br>
                Vanesa Farfan
                <br>
                Brayan Gonzalez
