--- a/index_2.html
+++ b/index_2.html
@@ -2,7 +2,7 @@
     <img src="imagenes/logo u cundinamarca.png"width=500px height="250px" alt=""><br>
     <main>
          <section id="seccion1">
-              <h2><b> PARQUEADERO AUTOMATIZADO</b></h2>
+              <h2><b> Glosario Pensamiento Algoritmico</b></h2>
               <br>
               <br>
               <br>
