--- a/index_2.html
+++ b/index_2.html
@@ -32,3 +32,9 @@
          </nav>
          <link rel="stylesheet" href="css/estilos.css">
 </header>
+    <footer>
+     <div class="footer-text">
+     <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
+     </div>
+     
+     </footer>
