--- a/index_2.html
+++ b/index_2.html
@@ -32,6 +32,8 @@
          </nav>
          <link rel="stylesheet" href="css/estilos.css">
 </header>
+</body>
+
     <footer>
      <div class="footer-text">
      <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
