--- a/index_3.html
+++ b/index_3.html
@@ -30,6 +30,7 @@
          </nav>
          <link rel="stylesheet" href="css/estilos.css">
 </header>
+</body>
 <section2>
     <details>
         <summary>Sistema</summary>
