--- a/index.html
+++ b/index.html
@@ -33,3 +33,9 @@
                <link rel="stylesheet" href="css/estilos.css">
      </header>
 </body>
+       <footer>
+     <div class="footer-text">
+     <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
+     </div>
+     
+     </footer>
