--- a/index_1.html
+++ b/index_1.html
@@ -1,5 +1,5 @@
 <div class="logo">
-     <img src="imagenes/logo u cundinamarca.png"width=500px height="250px" alt=""><br>
+     <img src="Imagenes/logo u cundinamarca.png"width=500px height="250px" alt=""><br>
      <main>
           <section id="seccion1">
                <h2><b> Glosario Fundamentos Ingenieria</b></h2>
