--- a/index.html
+++ b/index.html
@@ -1,26 +1,9 @@
 <div class="logo">
      <img src="Imagenes/logo u cundinamarca.png"width=500px height="250px" alt=""><br>
      <main>
-          <section id="seccion1">
-               <h2><b> PARQUEADERO AUTOMATIZADO</b></h2>
-               <br>
-               <br>
-               <br>
-               <br>
-          </section>
-          <aside ID="menu_redes">
-               Vanesa Farfan
-               <br>
-               Brayan Gonzalez
-               <br>
-               Cristian Veloza
-               <br><br>
-     
-
-          </aside>
+         <h2> PARQUEADERO AUTOMATIZADO </h2> 
+      <h4> Autores: Brayan Gonzalez, Vanesa Farafan y Cristian Veloza</h4> 
      </main>
-     
-</main>
 
 <body>
      <header>               
