--- a/index_1.html
+++ b/index_1.html
@@ -1,25 +1,10 @@
 <div class="logo">
      <img src="Imagenes/logo u cundinamarca.png"width=500px height="250px" alt=""><br>
-     <main>
-          <section id="seccion1">
-               <h2><b> Glosario Fundamentos Ingenieria</b></h2>
-               <br>
-               <br>
-               <br>
-               <br>
-          </section>
-          <aside ID="menu_redes">
-               Brayan Gonzalez
-               <br>
-               Vanessa Farfan
-               <br>
-               Cristian Veloza
-               <br><br>
-
-          </aside>
+       <main>
+         <h2>  Glosario Fundamentos Ingenieria </h2> 
+      <h4> Autores: Brayan Gonzalez, Vanesa Farafan y Cristian Veloza</h4> 
      </main>
      
-</main>
 <body>
      <header>               
           <nav>
