--- a/index_3.html
+++ b/index_3.html
@@ -1,26 +1,9 @@
 <div class="logo">
     <img src="Imagenes/logo u cundinamarca.png"width=500px height="250px" alt=""><br>
-    <main>
-         <section id="seccion1">
-              <h2><b> Glosario Pensamiento Sistematico</b></h2>
-              <br>
-              <br>
-              <br>
-              <br>
-         </section>
-         <aside ID="menu_redes">
-            Brayan Gonzalez
-            <br>
-            Vanessa Farfan
-            <br>
-            Cristian Veloza
-            <br><br>
-
-         </aside>
-    </main>
-    
-</main>
-<body>
+     <main>
+         <h2>  Glosario Pensamiento Sistematico</h2> 
+      <h4> Autores: Brayan Gonzalez, Vanesa Farafan y Cristian Veloza</h4> 
+     </main>
     <header>               
          <nav>
               <a href="index.html" class="nav-link">Inicio</a>
