--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <div class="logo">
-     <img src="Imagenes/logo u cundinamarca.png"width=500px height="250px" alt=""><br>
+     <img src="Imagenes/logo u cundinamarca.png"width=500px height="250px" alt="">
+ </div>
+     
      <main>
          <h2> PARQUEADERO AUTOMATIZADO </h2> 
       <h4> Autores: Brayan Gonzalez, Vanesa Farafan y Cristian Veloza</h4> 
