--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class="logo">
-     <img src="Imagenes/logo u cundinamarca.png"width=500px height="250px" alt="">
+     <img src="Imagenes/logo u cundinamarca.png"alt="">
  </div>
      
      <main>
