--- a/index_1.html
+++ b/index_1.html
@@ -1,5 +1,6 @@
 <div class="logo">
-     <img src="Imagenes/logo u cundinamarca.png"width=500px height="250px" alt=""><br>
+     <img src="Imagenes/logo u cundinamarca.png"alt=""class="log">
+ </div>
        <main>
          <h2>  Glosario Fundamentos Ingenieria </h2> 
       <h4> Autores: Brayan Gonzalez, Vanesa Farafan y Cristian Veloza</h4> 
