--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
                <link rel="stylesheet" href="css/estilos.css">
      </header>
 </body>
+
+<h2>Idea principal</h2>
+<p>Como idea para nuestro proyecto hemos decidido escoger hacer o mejorar los sistemas de aparcamiento de coches y hemos llamado a nuestro proyecto parqueadero automatizado, buscamos por medio de las nuevas tecnologías lograr hacer de un parqueadero mas ergonómico y eficiente que tenga menos impacto en la congestión vial que brinde mas seguridad, mas agilidad y eficiencia.</p>
+<h2>investigación</h2>
+<p>Parqueadero automatizado, es un sistema que nos permite estacionar dos o tres vehículos en el mismo espacio que normalmente ocuparía un solo auto</p>
+
+
+
        <footer>
      <div class="footer-text">
      <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
