--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
                <link rel="stylesheet" href="css/estilos.css">
      </header>
 </body>
-
-<h4>Idea principal</h4>
+<section2>
+     <h4>Idea principal</h4>
 <p>Como idea para nuestro proyecto hemos decidido escoger hacer o mejorar los sistemas de aparcamiento de coches y hemos llamado a nuestro proyecto parqueadero automatizado, buscamos por medio de las nuevas tecnologías lograr hacer de un parqueadero mas ergonómico y eficiente que tenga menos impacto en la congestión vial que brinde mas seguridad, mas agilidad y eficiencia.</p>
 <h4>investigación</h4>
 <p>Parqueadero automatizado, es un sistema que nos permite estacionar dos o tres vehículos en el mismo espacio que normalmente ocuparía un solo auto</p>
 
+</section2>
 
 
        <footer>
