--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </body>
 <section2>
      <h4>Idea principal</h4>
-<p>Como idea para nuestro proyecto hemos decidido escoger hacer o mejorar los sistemas de aparcamiento de coches y hemos llamado a nuestro proyecto parqueadero automatizado, buscamos por medio de las nuevas tecnologías lograr hacer de un parqueadero mas ergonómico y eficiente que tenga menos impacto en la congestión vial que brinde mas seguridad, mas agilidad y eficiencia.</p>
+<p>Como idea para nuestro proyecto hemos decidido escoger, hacer o mejorar los sistemas de aparcamiento de coches y hemos llamado a nuestro proyecto parqueadero automatizado, buscamos por medio de las nuevas tecnologías lograr hacer de un parqueadero mas ergonómico y eficiente que tenga menos impacto en la congestión vial, que brinde mas seguridad, mas agilidad y eficiencia.</p>
 <h4>investigación</h4>
 <p>Parqueadero automatizado, es un sistema que nos permite estacionar de 8 a 10 vehículos en el mismo espacio que normalmente ocuparía un 2 vehiculos</p>
 <img src="Imagenes/Parqueadero.png"width=200px height="450" alt=""><br></p>
