--- a/index_2.html
+++ b/index_2.html
@@ -17,16 +17,10 @@
          <link rel="stylesheet" href="css/estilos.css">
 </header>
 </body>
+<body>
 
-    <footer>
-     <div class="footer-text">
-     <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
-     </div>
-     
-     </footer>
 <section2>
 	
-
 <details>
 <summary>Aleatorio</summary>
 <p>Aleatorio:Es algo que no sigue una pauta definida ejemplo en un experimiento aleatorio si hay mas de un resultade posible y no podemos decir con anteriorded lo que va a suceder, en este caso depende del azar,no sigue una pauta definida.</p> 
@@ -114,8 +108,6 @@
 	</section2>
 
 	
-	
-
 </main>
 
 <footer>
