--- a/index_2.html
+++ b/index_2.html
@@ -28,12 +28,12 @@
 <details>
 <summary>Algoritmo</summary>
 <p> Algoritmo:Secuencia de pasos para solucionar un problema.</p> 
-</details>     
-   
-<details>
-<summary>Seudocodigo</summary>
-<p>Seudocodigo:Instrucciones que se entregan en el lenguaje propio de la persona para resoluer un algoritmo.</p> 
-</details>           
+	</details>     
+	<details>
+         <summary>Seudocódigo</summary>
+         <p>El seudocódigo es una herramienta utilizada en la programación y el diseño de algoritmos para representar la lógica de un programa de manera más abstracta y legible que el código real en un lenguaje de programación. Su propósito principal es permitir la planificación y la comunicación de algoritmos sin preocuparse por la sintaxis específica de un lenguaje de programación.<br>
+              <img src="Imagenes/Picture16.png"width=300px height="200px" alt=""><br></p>
+   	</details>
        
 <details>
 <summary>Nemotecnica</summary>
