--- a/index_3.html
+++ b/index_3.html
@@ -81,6 +81,85 @@
              Descripción: Cada vez que lanzas el dado, el resultado es incierto, pero puedes calcular la probabilidad de que salga cada cara (1/6). La aleatoriedad del lanzamiento hace que el resultado específico no se pueda predecir con certeza.<br>
              <img src="Imagenes/Picture24.png"width=300px height="200px" alt=""><br></p>
     </details>
+     <details>
+<summary>sistema Gestalt:</summary>
+<article>
+<p>La Gestalt es una teoría psicológica que se centra en la percepción y la experiencia humana, especialmente en cómo las personas organizan y perciben la información visual. 
+Ejemplo
+Un triángulo formado por tres ángulos abiertos (o sea, con las líneas incompletas) será percibido por la mayoría de las personas como un triángulo completo.
+</p> 
+</article>
+</details> 	
+
+<details>
+<summary>sistema equinifinidad </summary>
+<article>
+<p>La equifinidad es un concepto utilizado en la teoria de sistema y la cibernetica para describir la capacidad de un sistema para alcanzar un estado final o objetivos a traves de diferentes de diferentes caminos o procesos</p> 
+</article>
+</details> 
+           
+<details>
+<summary> sinergia: </summary>
+<article>
+<p>La sinergia es el concepto que describe cómo la combinación de elementos o partes produce un resultado superior al que se obtendría sumando los esfuerzos individuales de cada uno por separado. 
+Ejemplo
+En un equipo de trabajo, la sinergia ocurre cuando los miembros colaboran de manera efectiva, combinando sus habilidades y conocimientos para alcanzar un objetivo común de manera más eficiente y con mejores resultados que si cada uno trabajara por separado.
+</p> 
+</article>
+</details>           
+
+<details>
+<summary> recursividad: </summary>
+<article>
+<p> La recursividad es una propiedad de los sistemas, procesos o funciones que se refiere a la capacidad de llamarse a sí mismos o de repetirse de manera autorreferencial. En otras palabras, un sistema o proceso recursivo es aquel que se utiliza a sí mismo como parte de su propio proceso o función.
+</p> 
+</article>
+</details>	
+
+<details>
+<summary> morfogénesis: </summary>
+<article>
+<p> La morfogénesis es el proceso biológico por el cual un organismo o una estructura adquiere su forma específica durante el desarrollo. 
+Ejemplo 
+Durante el desarrollo embrionario de un ser humano, la morfogénesis es lo que guía la formación de órganos como el corazón, los pulmones y el cerebro.
+</p> 
+</article>
+</details> 
+
+<details>
+<summary> Organicidad </summary>
+<article>
+<p> La organicidad se refiere a la calidad o estado de ser orgánico, es decir, relativo a los seres vivos o a los sistemas que presentan características similares a los seres vivos. En este sentido, la organicidad implica la presencia de estructuras, procesos y relaciones que se encuentran en los sistemas biológicos.
+</p> 
+</article>
+</details> 
+
+<details>
+<summary> Isomorfismo: </summary>
+<article>
+<p> El isomorfismo es un concepto que se refiere a una correspondencia estructural o una relación uno a uno entre dos estructuras que mantienen la misma forma o propiedades. 
+Ejemplo 
+En programación, dos estructuras de datos que tienen la misma organización y permiten las mismas operaciones pueden ser consideradas isomorfas, aunque se implementen de manera diferente.
+</p> 
+</article>
+</details> 
+
+<details>
+<summary> homeomorfismo </summary>
+<article>
+<p> Un homeomorfismo es un concepto matemático que se refiere a una correspondencia entre dos espacios topológicos que preserva la estructura topológica de los espacios. En otras palabras, un homeomorfismo es una transformación que mantiene las propiedades topológicas de los espacios, como la conectividad, la compacidad y la dimensionalidad. Formalmente, un homeomorfismo es una función continua y biyectiva entre dos espacios topológicos, X e Y, que tiene una función inversa continua. Esto significa que la función y su inversa son ambas continuas, y que cada punto en X se corresponde con un punto único en Y, y viceversa.</p> 
+</article>
+</details> 
+
+<details>
+<summary> homeóstasis </summary>
+<article>
+<p> es el proceso por el cual un organismo mantiene un equilibrio interno constante a pesar de los cambios en el entorno externo. 
+Ejemplo 
+Cuando la temperatura corporal aumenta debido al calor externo, el cuerpo activa mecanismos como la sudoración para enfriarse. 
+</p> 
+</article>
+</details> 
     
 </section2>
 
