--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
      </header>
 </body>
 <section2>
-     <h4>Idea principal</h4>
-<p>Como idea para nuestro proyecto hemos decidido escoger, hacer o mejorar los sistemas de aparcamiento de coches y hemos llamado a nuestro proyecto parqueadero automatizado, buscamos por medio de las nuevas tecnologías lograr hacer de un parqueadero mas ergonómico y eficiente que tenga menos impacto en la congestión vial, que brinde mas seguridad, mas agilidad y eficiencia.</p>
-<h4>investigación</h4>
+<h4>Definicion.</h4>
+<p>Como idea para nuestro proyecto hemos decidido mejorar los sistemas de aparcamiento de coches de una forma más viable, el cual será una torre en especie de ruleta la cual donde anteriormente se estacionaban dos vehículos podremos estacionar de 8 hasta 12 vehículos a la vez, con esto buscamos por medio de las nuevas tecnologías hacer de un parqueadero más ergonómico y eficiente. Que tenga menos impacto en la congestión vial, que brinde más seguridad, más agilidad y eficiencia al momento de parquear.</p>
+<h4>Investigación</h4>
 <p>Parqueadero automatizado, es un sistema que nos permite estacionar de 8 a 10 vehículos en el mismo espacio que normalmente ocuparía un 2 vehiculos</p>
 <img src="Imagenes/Parqueadero.png"width=100px height="200" alt=""><br></p>
 </section2>
