--- a/index.html
+++ b/index.html
@@ -21,9 +21,53 @@
 <section2>
 <h4>Definicion.</h4>
 <p>Como idea para nuestro proyecto hemos decidido mejorar los sistemas de aparcamiento de coches de una forma más viable, el cual será una torre en especie de ruleta la cual donde anteriormente se estacionaban dos vehículos podremos estacionar de 8 hasta 12 vehículos a la vez, con esto buscamos por medio de las nuevas tecnologías hacer de un parqueadero más ergonómico y eficiente. Que tenga menos impacto en la congestión vial, que brinde más seguridad, más agilidad y eficiencia al momento de parquear.</p>
-<h4>Investigación</h4>
-<p>Parqueadero automatizado, es un sistema que nos permite estacionar de 8 a 10 vehículos en el mismo espacio que normalmente ocuparía un 2 vehiculos</p>
 <img src="Imagenes/Parqueadero.png"width=100px height="200" alt=""><br></p>
+<h4>Marco Teorico 1.</h4>
+<p>Crear un parqueadero automatizado vertical ofrece varias ventajas:
+
+-Ahorro de espacio: Utiliza el espacio de manera eficiente, permitiendo el estacionamiento de más vehículos en áreas reducidas.
+-Reducción de costos operativos: Disminuye la necesidad de personal y mejora la gestión del espacio.
+-Mayor seguridad: Minimiza el riesgo de robo o daño al vehículo, ya que los autos están resguardados y no expuestos.
+-Sostenibilidad: Promueve el uso de energía eléctrica y puede integrar sistemas de carga para vehículos eléctricos.
+-Mejora la experiencia del usuario: Facilita el acceso y reduce el tiempo de búsqueda de estacionamiento.
+-Valor añadido: Aumenta la rentabilidad del inmueble y puede atraer a inquilinos o clientes que valoran la comodidad.
+
+El desarrollo de parqueaderos automatizados verticales ha avanzado significativamente en los últimos años. Aquí hay algunas tendencias y características actuales:
+
+-Tecnología avanzada: Se están utilizando sistemas de inteligencia artificial y machine learning para optimizar la gestión del espacio y mejorar la eficiencia operativa.
+-Sostenibilidad: Muchos nuevos diseños integran paneles solares y sistemas de carga para vehículos eléctricos, alineándose con las tendencias de movilidad sostenible.
+-Conectividad: Los parqueaderos están cada vez más interconectados con aplicaciones móviles, permitiendo a los usuarios reservar espacios, realizar pagos y recibir notificaciones en tiempo real.
+-Eficiencia energética: Se están implementando sistemas de iluminación LED y gestión de energía para reducir el consumo.
+-Expansión global: Ciudades de todo el mundo, especialmente en Asia y Europa, están adoptando estos sistemas para abordar problemas de congestión y escasez de espacio.
+
+-Regulaciones: Cada vez más gobiernos están promoviendo o incentivando la construcción de estos sistemas como parte de sus políticas urbanas.</p>
+<h4>Marco Teorico 2.</h4>
+<p>La historia del parqueadero automatizado vertical comienza en la primera mitad del siglo XX, cuando la necesidad de maximizar el espacio urbano se hizo evidente en las ciudades en crecimiento.
+
+-Años 1920-1930: Los primeros sistemas de estacionamiento mecánico fueron desarrollados en EE. UU. y Europa. Se utilizaban elevadores para mover vehículos entre niveles.
+
+-Años 1960-1970: La tecnología mejoró con la introducción de sistemas más avanzados, que permitían una mayor capacidad y eficiencia.
+
+-Años 1980-1990: La automatización se expandió gracias a la electrónica y la robótica, dando lugar a sistemas completamente automatizados que no requerían intervención humana.
+
+-Siglo XXI: La demanda de soluciones sostenibles y eficientes ha impulsado el desarrollo de parques de estacionamiento verticales automatizados en muchas ciudades del mundo, incorporando tecnologías inteligentes y de energía renovable.
+
+Hoy en día, estos sistemas se están adoptando en proyectos arquitectónicos innovadores, contribuyendo a resolver el problema del espacio en entornos urbanos.
+Para que un parqueadero automatizado vertical cumpla con la normativa legal vigente en Colombia, debe considerar varios aspectos:
+
+-Normativas de construcción: Debe cumplir con el Código Nacional de Construcción y las normas urbanísticas locales, que incluyen aspectos de diseño, accesibilidad y seguridad.
+
+-Regulación de parqueaderos: Debe adherirse a las normas específicas de parqueaderos, como las establecidas por el Ministerio de Transporte y las alcaldías, que regulan el número de espacios, dimensiones mínimas y señalización.
+
+-Seguridad: Implementar medidas de seguridad, como sistemas de control de acceso, cámaras de vigilancia y alarmas, para proteger tanto los vehículos como a los usuarios.
+
+-Accesibilidad: Garantizar que los usuarios, incluidos aquellos con discapacidades, tengan acceso adecuado, siguiendo la normativa sobre accesibilidad.
+
+-Impacto ambiental: Considerar regulaciones relacionadas con el impacto ambiental y la sostenibilidad, incluyendo el manejo de aguas lluvias y el uso eficiente de energía.
+
+-Permisos y licencias: Obtener los permisos de funcionamiento necesarios, que pueden incluir licencias ambientales, de construcción y de uso de suelo
+</p>
+
 </section2>
 
 
