--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <h4>Definicion.</h4>
 <p>Como idea para nuestro proyecto hemos decidido mejorar los sistemas de aparcamiento de coches de una forma más viable, el cual será una torre en especie de ruleta la cual donde anteriormente se estacionaban dos vehículos podremos estacionar de 8 hasta 12 vehículos a la vez, con esto buscamos por medio de las nuevas tecnologías hacer de un parqueadero más ergonómico y eficiente. Que tenga menos impacto en la congestión vial, que brinde más seguridad, más agilidad y eficiencia al momento de parquear.</p>
 <img src="Imagenes/Parqueadero.png"width=100px height="200" alt=""><br></p>
+<h4>Justificacion.</h4>
+<p>Con el paso del tiempo y la nueva era de consumismo, estamos viviendo un fenómeno que es la sobrepoblación vehicular, con esta la falta de vías y parqueaderos para los mismos. Es por esta razón que hoy en día nos vemos en la obligación de mejorar los sistemas de parqueo en pro de que sean más eficientes, más ágiles y ocupen menos espacio. De esta manera lograr menos congestión en el tráfico y un parqueo rápido y seguro de los vehículos.</p>
 <h4>Marco Teorico 1.</h4>
 <p>Crear un parqueadero automatizado vertical ofrece varias ventajas:
 
