--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
        <br>
 -Valor añadido: Aumenta la rentabilidad del inmueble y puede atraer a inquilinos o clientes que valoran la comodidad.
        <br>
-
 El desarrollo de parqueaderos automatizados verticales ha avanzado significativamente en los últimos años. Aquí hay algunas tendencias y características actuales:
        <br>
-
 -Tecnología avanzada: Se están utilizando sistemas de inteligencia artificial y machine learning para optimizar la gestión del espacio y mejorar la eficiencia operativa.
   <br>
 -Sostenibilidad: Muchos nuevos diseños integran paneles solares y sistemas de carga para vehículos eléctricos, alineándose con las tendencias de movilidad sostenible.
@@ -67,7 +65,41 @@ El desarrollo de parqueaderos automatizados verticales ha avanzado significativa
   <br>
 Hoy en día, estos sistemas se están adoptando en proyectos arquitectónicos innovadores, contribuyendo a resolver el problema del espacio en entornos urbanos.
 </p>
-
+<h4>Cumplimiento Normarico</h4>
+     <p>Para que un parqueadero automatizado vertical cumpla con la normativa legal vigente en Colombia, debe considerar varios aspectos:
+<br>
+-Normativas de construcción: Debe cumplir con el Código Nacional de Construcción y las normas urbanísticas locales, que incluyen aspectos de diseño, accesibilidad y seguridad.
+<br>
+-Regulación de parqueaderos: Debe adherirse a las normas específicas de parqueaderos, como las establecidas por el Ministerio de Transporte y las alcaldías, que regulan el número de espacios, dimensiones mínimas y señalización.
+<br>
+-Seguridad: Implementar medidas de seguridad, como sistemas de control de acceso, cámaras de vigilancia y alarmas, para proteger tanto los vehículos como a los usuarios.
+<br>
+-Accesibilidad: Garantizar que los usuarios, incluidos aquellos con discapacidades, tengan acceso adecuado, siguiendo la normativa sobre accesibilidad.
+<br>
+-Impacto ambiental: Considerar regulaciones relacionadas con el impacto ambiental y la sostenibilidad, incluyendo el manejo de aguas lluvias y el uso eficiente de energía.
+<br>
+-Permisos y licencias: Obtener los permisos de funcionamiento necesarios, que pueden incluir licencias ambientales, de construcción y de uso de suelo.
+<br>
+requisitos normativos estipulados por el código de policía, articulo 90 ley 1801 de 2016.
+<br>
+1. Constitución de póliza de responsabilidad civil extra-contractual, para la protección de los bienes depositados y las personas. En el recibo de deposito del vehículo se informara el numero de la póliza, compañía aseguradora y el procedimiento de reclamación.
+<br>
+2. Expedir recibo de deposito del vehículo al momento del ingreso, en el que se consigne el numero de placa del vehículo y la hora de ingreso.
+<br>
+3. Ofrecer al conductor del vehículo la opción de relacionar bienes adicionales al que deja en deposito.
+<br>
+4. Cumplir con las tarifas establecidas por la autoridad distrital o municipal.
+<br>
+5. Cumplir los requisitos de carácter sanitario, ambiental  y de transito.
+<br>
+6. Contar con seguridad permanente y de acuerdo con la clasificación del estacionamiento o parqueadero, con acomodadores uniformados con licencia de conducción y con acomodadores uniformados con licencia de conducción y con credenciales que faciliten su identificación por parte de los usuarios.
+<br>
+7. Señalizar debidamente la entrada y la salida de vehículos y demarcar el espacio que ocupa cada vehículo y los corredores de giro y movilidad.
+<br>
+8.  Cumplir las exigencias para el desarrollo de actividades económicas.
+<br>
+9. Adecuar o habilitar plazas para el estacionamiento de bicicletas.         
+     </p>
 </section2>
 
 
