--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ El desarrollo de parqueaderos automatizados verticales ha avanzado significativa
   <br>
 Hoy en día, estos sistemas se están adoptando en proyectos arquitectónicos innovadores, contribuyendo a resolver el problema del espacio en entornos urbanos.
 </p>
-<h4>Cumplimiento Normarico</h4>
+<h4>Cumplimiento Normarivo.</h4>
      <p>Para que un parqueadero automatizado vertical cumpla con la normativa legal vigente en Colombia, debe considerar varios aspectos:
 <br>
 -Normativas de construcción: Debe cumplir con el Código Nacional de Construcción y las normas urbanísticas locales, que incluyen aspectos de diseño, accesibilidad y seguridad.
