--- a/Formulario.html
+++ b/Formulario.html
@@ -9,6 +9,7 @@
               <a href="index_1.html" class="nav-link">Glosario Fundamentos Ingenieria</a>
               <a href="index_2.html" class="nav-link">Glosario Pensamiento Algoritmico</a>
               <a href="index_3.html" class="nav-link">Glosario Pensamiento Sistematico</a>
+              <a href="Formulario.html" class="nav-link">Formulario</a>
          </nav>
          <link rel="stylesheet" href="css/estilos.css">
 </header>
