--- a/Formulario.html
+++ b/Formulario.html
@@ -1,7 +1,12 @@
 <div class="logo">
-    <img src="imagenes/logo u cundinamarca.png"width=500px height="250px" alt=""><br>
-   
-</main>
+     <img src="Imagenes/logo u cundinamarca.png"alt=""class="log">
+ </div>
+     
+     <main>
+         <h2> PARQUEADERO AUTOMATIZADO </h2> 
+      <h4> Autores: Brayan Gonzalez, Vanesa Farafan y Cristian Veloza</h4> 
+     </main>
+
 <body>
     <header>               
          <nav>
