--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      
      <main>
          <h2> PARQUEADERO AUTOMATIZADO </h2> 
-      <h4> Autores: Brayan Gonzalez, Vanesa Farafan y Cristian Veloza</h4> 
+      <h4> Autores: Brayan Stiven Gonzalez Gomez, Laura Vanesa Farafan Mayorga</h4> 
      </main>
 
 <body>
