--- a/index_1.html
+++ b/index_1.html
@@ -3,7 +3,7 @@
  </div>
        <main>
          <h2>  Glosario Fundamentos Ingenieria </h2> 
-      <h4> Autores: Brayan Gonzalez, Vanesa Farafan y Cristian Veloza</h4> 
+      <h4> Autores: Brayan Stiven Gonzalez Gomez, Laura Vanesa Farafan Mayorga</h4> 
      </main>
      
 <body>
