--- a/index_3.html
+++ b/index_3.html
@@ -5,6 +5,7 @@
          <h2>  Glosario Pensamiento Sistematico</h2> 
       <h4> Autores: Brayan Stiven Gonzalez Gomez, Laura Vanesa Farafan Mayorga</h4> 
      </main>
+<body></body>
     <header>               
          <nav>
               <a href="index.html" class="nav-link">Inicio</a>
@@ -15,7 +16,7 @@
          </nav>
          <link rel="stylesheet" href="css/estilos.css">
 </header>
-
+</body>
 <section2>
     <details>
         <summary>Sistema</summary>
