--- a/index_3.html
+++ b/index_3.html
@@ -5,7 +5,7 @@
          <h2>  Glosario Pensamiento Sistematico</h2> 
       <h4> Autores: Brayan Stiven Gonzalez Gomez, Laura Vanesa Farafan Mayorga</h4> 
      </main>
-<body></body>
+<body>
     <header>               
          <nav>
               <a href="index.html" class="nav-link">Inicio</a>
