--- a/validacion_formulario.html
+++ b/validacion_formulario.html
@@ -64,3 +64,9 @@
 </body>
     
 </html>
+<footer>
+    <div class="footer-text">
+    <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
+    </div>
+    
+    </footer>
