--- a/index_2.html
+++ b/index_2.html
@@ -13,7 +13,7 @@
               <a href="index_1.html" class="nav-link">Glosario Fundamentos Ingenieria</a>
               <a href="index_2.html" class="nav-link">Glosario Pensamiento Algoritmico</a>
               <a href="index_3.html" class="nav-link">Glosario Pensamiento Sistematico</a>
-	      <a href="validacion_formulario.html" class="nav-link">Formulario</a>
+	      <a href="validacion_formulario_contacto_basico.html" class="nav-link">Formulario</a>
          </nav>
          <link rel="stylesheet" href="css/estilos.css">
 </header>
