--- a/validacion_formulario_contacto_basico.html
+++ b/validacion_formulario_contacto_basico.html
@@ -1,3 +1,22 @@
+<div class="logo">
+     <img src="Imagenes/logo u cundinamarca.png"alt=""class="log">
+ </div>
+     <main>
+         <h2>  Glosario Pensamiento Sistematico</h2> 
+      <h4> Autores: Brayan Stiven Gonzalez Gomez, Laura Vanesa Farafan Mayorga</h4> 
+     </main>
+<body>
+    <header>               
+         <nav>
+              <a href="index.html" class="nav-link">Inicio</a>
+              <a href="index_1.html" class="nav-link">Glosario Fundamentos Ingenieria</a>
+              <a href="index_2.html" class="nav-link">Glosario Pensamiento Algoritmico</a>
+              <a href="index_3.html" class="nav-link">Glosario Pensamiento Sistematico</a>
+              <a href="validacion_formulario_contacto_basico.html" class="nav-link">Formulario</a>
+         </nav>
+         <link rel="stylesheet" href="css/estilos.css">
+</header>
+</body>
 <!DOCTYPE html>
 <html lang="es">
   <head>
