--- a/validacion_formulario_contacto_basico.html
+++ b/validacion_formulario_contacto_basico.html
@@ -135,3 +135,10 @@
     
 </html>
 
+
+<footer>
+    <div class="footer-text">
+    <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
+    </div>
+    
+    </footer>
