--- a/validacion_formulario_contacto_basico.html
+++ b/validacion_formulario_contacto_basico.html
@@ -37,9 +37,9 @@
 
 </head>
 <body>
-    <header>
+    <header1>
         <h2>EJERCICIO VALIDACIÓN DE DATOS 3</h2><hr><br>            
-    </header>
+    </header1>
      <p>Este ejercicio puede ser utilizado como ejemplo para implementar controles de verificación de DATOS ingresados en un formulario de HTML5.   Aquí puede observar algunos procedimiento simples utilizando <i>"Expresiones Regulares"</i> que suelen aplicarse para validar la consistencia de los datos capturados y para asegurar que los datos estén correctos antes de su almacenamiento o procesamiento.</p>
     <p>Sirve como tutorial y referencia para conocer el lenguaje de programación <b>Java Script</b> y su utilidad en el desarrollo de páginas WEB.</p>
     <p> En este formulario se registran cinco datos con características y condiciones de validación diferentes: </p>
