--- a/validacion_formulario_contacto_basico.html
+++ b/validacion_formulario_contacto_basico.html
@@ -40,9 +40,9 @@
     <header1>
         <h2>EJERCICIO VALIDACIÓN DE DATOS 3</h2><hr><br>            
     </header1>
-     <p>Este ejercicio puede ser utilizado como ejemplo para implementar controles de verificación de DATOS ingresados en un formulario de HTML5.   Aquí puede observar algunos procedimiento simples utilizando <i>"Expresiones Regulares"</i> que suelen aplicarse para validar la consistencia de los datos capturados y para asegurar que los datos estén correctos antes de su almacenamiento o procesamiento.</p>
-    <p>Sirve como tutorial y referencia para conocer el lenguaje de programación <b>Java Script</b> y su utilidad en el desarrollo de páginas WEB.</p>
-    <p> En este formulario se registran cinco datos con características y condiciones de validación diferentes: </p>
+     <p1>Este ejercicio puede ser utilizado como ejemplo para implementar controles de verificación de DATOS ingresados en un formulario de HTML5.   Aquí puede observar algunos procedimiento simples utilizando <i>"Expresiones Regulares"</i> que suelen aplicarse para validar la consistencia de los datos capturados y para asegurar que los datos estén correctos antes de su almacenamiento o procesamiento.</p1>
+    <p1>Sirve como tutorial y referencia para conocer el lenguaje de programación <b>Java Script</b> y su utilidad en el desarrollo de páginas WEB.</p1>
+    <p1> En este formulario se registran cinco datos con características y condiciones de validación diferentes: </p1>
     <ul>
         <li><u>Nombre y Apellido:</u> Dato alfanumérico, incluye espacios en blanco, letras con acentos y otros caracteres especiales como la "ñ". Debe empezar por una letra y no puede contener algunos símbolos como el $, @, %, entre otros.</li>
         <li><u>Edad:</u> Dato numérico (positivo) mayor que 10 y menor que 100.</li>
