--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 <p>Como idea para nuestro proyecto hemos decidido mejorar los sistemas de aparcamiento de coches de una forma más viable, el cual será una torre en especie de ruleta la cual donde anteriormente se estacionaban dos vehículos podremos estacionar de 8 hasta 12 vehículos a la vez, con esto buscamos por medio de las nuevas tecnologías hacer de un parqueadero más ergonómico y eficiente. Que tenga menos impacto en la congestión vial, que brinde más seguridad, más agilidad y eficiencia al momento de parquear.</p>
 <img src="Imagenes/Parqueadero.png"width=100px height="200" alt=""><br></p>
 <h4>Justificacion.</h4>
-<p>Con el paso del tiempo y la nueva era de consumismo, estamos viviendo un fenómeno que es la sobrepoblación vehicular, con esta la falta de vías y parqueaderos para los mismos. Es por esta razón que hoy en día nos vemos en la obligación de mejorar los sistemas de parqueo en pro de que sean más eficientes, más ágiles y ocupen menos espacio. De esta manera lograr menos congestión en el tráfico y un parqueo rápido y seguro de los vehículos.</p>
+<p></p>En las grandes ciudades colombianas, el crecimiento acelerado del parque automotor y la falta de espacio para nuevas infraestructuras de estacionamiento están generando serios desafíos para la movilidad urbana. Ciudades como Bogotá, Medellín y Cali enfrentan problemas de congestión vehicular, escasez de lugares para estacionar y ocupación desmedida de terrenos en zonas comerciales y residenciales. Estos factores han impulsado la búsqueda de soluciones innovadoras que optimicen el uso del espacio y mejoren la eficiencia en la gestión del estacionamiento.
+<br>
+Una de las soluciones más prometedoras es la implementación de parqueaderos automatizados verticales, una tecnología avanzada que utiliza sistemas automáticos para almacenar vehículos en estructuras de varios pisos, aprovechando al máximo el espacio vertical en lugar de horizontal. Este tipo de parqueadero representa un cambio radical frente a los tradicionales estacionamientos de superficie y ofrece una alternativa más eficiente, ecológica y rentable en comparación con otros modelos.
+<br>
 <h4>Marco Teorico 1.</h4>
 <p>Crear un parqueadero automatizado vertical ofrece varias ventajas:
      <br>
