--- a/index.html
+++ b/index.html
@@ -20,13 +20,24 @@
      </header>
 </body>
 <section2>
-<h4>Definicion.</h4>
+     <h2>OBJETIVOS<h2>
+          <h4>Objetivo General<h4>
+               <p>Desarrollar e implementar un sistema de parqueadero automatizado vertical que optimice el uso del espacio, mejore la eficiencia operativa y garantice la seguridad de los vehículos y usuarios, ofreciendo una solución innovadora y sostenible para el estacionamiento en áreas urbanas de alta densidad.</p>
+          <h4>Objetivo Especificos<h4>
+               <p>Diseñar e integrar un sistema de sensores avanzados que permita la detección precisa de vehículos y garantice la seguridad durante el proceso de entrada, almacenamiento y salida de los mismos.
+<br>
+     Desarrollar un software de control automatizado que gestione de forma eficiente la asignación de espacios, el movimiento de las plataformas y la interacción con los usuarios mediante interfaces amigables.
+<br>
+     Implementar medidas de seguridad y monitoreo continuo a través de sensores de proximidad, cámaras y sistemas de diagnóstico, que minimicen riesgos de accidentes y optimicen el mantenimiento preventivo del sistema.
+</p>
+                    
+  <h4>Definicion.</h4>
 <p>Como idea para nuestro proyecto hemos decidido mejorar los sistemas de aparcamiento de coches de una forma más viable, el cual será una torre en especie de ruleta la cual donde anteriormente se estacionaban dos vehículos podremos estacionar de 8 hasta 12 vehículos a la vez, con esto buscamos por medio de las nuevas tecnologías hacer de un parqueadero más ergonómico y eficiente. Que tenga menos impacto en la congestión vial, que brinde más seguridad, más agilidad y eficiencia al momento de parquear.</p>
 <img src="Imagenes/Parqueadero.png"width=100px height="200" alt=""><br></p>
 <h4>Justificacion.</h4>
-<p></p>En las grandes ciudades colombianas, el crecimiento acelerado del parque automotor y la falta de espacio para nuevas infraestructuras de estacionamiento están generando serios desafíos para la movilidad urbana. Ciudades como Bogotá, Medellín y Cali enfrentan problemas de congestión vehicular, escasez de lugares para estacionar y ocupación desmedida de terrenos en zonas comerciales y residenciales. Estos factores han impulsado la búsqueda de soluciones innovadoras que optimicen el uso del espacio y mejoren la eficiencia en la gestión del estacionamiento.
+<p>En las grandes ciudades colombianas, el crecimiento acelerado del parque automotor y la falta de espacio para nuevas infraestructuras de estacionamiento están generando serios desafíos para la movilidad urbana. Ciudades como Bogotá, Medellín y Cali enfrentan problemas de congestión vehicular, escasez de lugares para estacionar y ocupación desmedida de terrenos en zonas comerciales y residenciales. Estos factores han impulsado la búsqueda de soluciones innovadoras que optimicen el uso del espacio y mejoren la eficiencia en la gestión del estacionamiento.
 <br>
-Una de las soluciones más prometedoras es la implementación de parqueaderos automatizados verticales, una tecnología avanzada que utiliza sistemas automáticos para almacenar vehículos en estructuras de varios pisos, aprovechando al máximo el espacio vertical en lugar de horizontal. Este tipo de parqueadero representa un cambio radical frente a los tradicionales estacionamientos de superficie y ofrece una alternativa más eficiente, ecológica y rentable en comparación con otros modelos.
+Una de las soluciones más prometedoras es la implementación de parqueaderos automatizados verticales, una tecnología avanzada que utiliza sistemas automáticos para almacenar vehículos en estructuras de varios pisos, aprovechando al máximo el espacio vertical en lugar de horizontal. Este tipo de parqueadero representa un cambio radical frente a los tradicionales estacionamientos de superficie y ofrece una alternativa más eficiente, ecológica y rentable en comparación con otros modelos.</p>
 <br>
 <h4>Marco Teorico 1.</h4>
 <p>Crear un parqueadero automatizado vertical ofrece varias ventajas:
