--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
      </header>
 </body>
 <section2>
-     <h2>OBJETIVOS<h2>
-          <h4>Objetivo General<h4>
+     <h2>OBJETIVOS</h2>
+          <h4>Objetivo General</h4>
                <p>Desarrollar e implementar un sistema de parqueadero automatizado vertical que optimice el uso del espacio, mejore la eficiencia operativa y garantice la seguridad de los vehículos y usuarios, ofreciendo una solución innovadora y sostenible para el estacionamiento en áreas urbanas de alta densidad.</p>
-          <h4>Objetivo Especificos<h4>
+          <h4>Objetivo Especificos</h4>
                <p>Diseñar e integrar un sistema de sensores avanzados que permita la detección precisa de vehículos y garantice la seguridad durante el proceso de entrada, almacenamiento y salida de los mismos.
-<br>
+<br></br>
      Desarrollar un software de control automatizado que gestione de forma eficiente la asignación de espacios, el movimiento de las plataformas y la interacción con los usuarios mediante interfaces amigables.
-<br>
+<br></br>
      Implementar medidas de seguridad y monitoreo continuo a través de sensores de proximidad, cámaras y sistemas de diagnóstico, que minimicen riesgos de accidentes y optimicen el mantenimiento preventivo del sistema.
 </p>
                     
